# oforth

./: README.md  dune-project  oforth.opam
lib/: ast0.ml  builtins.ml  builtins.mli  compiler.ml  dictionary.ml  dune  error.ml  helpers.ml  mutation.ml  opt.ml  optimize.ml  stack_effect.ml  state.ml
test/: dune
